# maincode_homework

./: .gitignore  README.md  analyser.py  config.json  config.py  main.py  processor.py  pyproject.toml  requirements.txt  splitting.py  tokeniser.py
configs/: default.json  splitting.json
report/ilm/: main.typ  refs.bib
