[project]
name = "maincode-homework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipython>=9.8.0",
    "langdetect>=1.0.9",
    "lingua-language-detector>=2.1.1",
    "lxml>=6.0.2",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251201",
    "pip>=25.3",
    "presidio-analyzer>=2.2.360",
    "presidio-anonymizer>=2.2.360",
    "pygments>=2.19.2",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
]
